--- a/cal-front/src/app/app.component.html
+++ b/cal-front/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
 
 <button (click) ="redirectToAddFood()">add food</button>
+<button (click) ="redirectToRecap()">recap</button>
