--- a/cal-front/src/app/recap/recap.component.html
+++ b/cal-front/src/app/recap/recap.component.html
@@ -1,1 +1,21 @@
-<p>recap works!</p>
+<div class="row">
+    <div class="col-12 col-md-3 justify-content-center">
+        <div style="display: block;">
+            <canvas baseChart
+                    [datasets]="lineChartData"
+                    [labels]="lineChartLabels"
+                    [options]="lineChartOptions"
+                    [type]="lineChartType">
+            </canvas>
+          </div>
+    </div>
+    <div class="col-12 col-md-3 justify-content-center">
+
+    </div>
+    <div class="col-12 col-md-3 justify-content-center">
+
+    </div>
+    <div class="col-12 col-md-3 justify-content-center">
+
+    </div>
+</div>
